--- a/note_21ver/210615_20-/210615_20-.md
+++ b/note_21ver/210615_20-/210615_20-.md
@@ -20,3 +20,12 @@
 \*\*string means they are only text characters from the begin and to the end
 <br>"hello " + "my name is turi"
 -> "hello my name is turi"
+
+---
+
+2022-01-06
+[과제]
+
+- 각 강의당 recap 요약정리
+  - #2.3 const and let
+  - #2.4 Booleans
